[gd_scene load_steps=4 format=3 uid="uid://bf0ji4vayvdal"]

[ext_resource type="Script" path="res://scenes/menu/versus_splash.gd" id="1_nqrdh"]

[sub_resource type="Gradient" id="Gradient_dq67u"]
colors = PackedColorArray(0.279825, 0, 0.0278985, 1, 4.33177e-07, 0.274201, 0.395359, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_io7hu"]
gradient = SubResource("Gradient_dq67u")
fill_to = Vector2(1, 1)

[node name="VersusSplash" type="Node2D"]
script = ExtResource("1_nqrdh")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
texture = SubResource("GradientTexture2D_io7hu")

[node name="MeNameBox" type="VBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -537.0
offset_bottom = 168.0
grow_horizontal = 0

[node name="MyDeckLabel" type="Label" parent="MeNameBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 90
text = "SOL BADGUY"

[node name="MyNameLabel" type="Label" parent="MeNameBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "PLAYER NAME IS "

[node name="VSLabel" type="Label" parent="."]
offset_left = 590.0
offset_top = 300.0
offset_right = 697.0
offset_bottom = 419.0
theme_override_font_sizes/font_size = 90
text = "VS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="YouNameBox" type="VBoxContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 550.0
offset_top = 500.0
offset_right = 1243.0
offset_bottom = 668.0
grow_horizontal = 0
grow_vertical = 0

[node name="YouDeckLabel" type="Label" parent="YouNameBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 90
text = "SOL BADGUY"
horizontal_alignment = 2

[node name="YouNameLabel" type="Label" parent="YouNameBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "PLAYER NAME VERY"
horizontal_alignment = 2
